--- a/root/static/styles/release-editor.css
+++ b/root/static/styles/release-editor.css
@@ -215,6 +215,7 @@ table.medium.tbl td.guesscase a { color: #d3d3d3; font-weight: bolder; }
 
 #release-editor table.advanced-format { width: 100%; padding: 2px 10px; }
 #release-editor table.advanced-format td { vertical-align: top; }
+#release-editor table.advanced-format div.row { margin-top: 0; }
 
 #release-editor fieldset.advanced-disc div.icon { padding: 10px; }
 #release-editor fieldset.advanced-disc div.add-track input.add-track-count {
